AMQP 1.0 - errors